--- a/package.json
+++ b/package.json
@@ -26,6 +26,14 @@
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "eslint": "^8.31.0",
+    "eslint-config-standard-with-typescript": "^24.0.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-promise": "^6.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
